--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^0.27.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "mongoose": "^6.3.1",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
